# cpp_2048

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Define/: BlockLocation.h  Define.h
Fuction/: Fuction.cpp  Fuction.h
Fuction/Check/: Check.cpp  Check.h
Fuction/Move/: Moves.cpp  Moves.h
Fuction/Random/: Random.cpp  Random.h
Fuction/Rotate/: Rotate.cpp  Rotate.h
